--- a/templates/shared/index.html.twig
+++ b/templates/shared/index.html.twig
@@ -37,6 +37,7 @@
             {% else %}
                 <button onclick="location.href='/university/view/1'">Профиль</button>
             {% endif %}
+            <button onclick="location.href='/logout'">Выйти</button>
         {% else %}
             <button onclick="location.href='/login'">Войти</button>
             <button onclick="location.href='/registration'">Регистрация</button>
