--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1439,6 +1439,53 @@ footer {
     }
 }
 
+/* favorite */
+/* Стили для основного контейнера */
+main {
+    padding: 20px;
+}
+
+/* Стили для секций */
+section {
+    margin-bottom: 20px;
+    border-radius: 10px;
+    background-color: #f9f9f9;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+section h2 {
+    color: #333;
+    font-size: 24px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 10px;
+}
+
+section ul {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+section ul li {
+    margin-bottom: 10px;
+}
+
+section ul li:last-child {
+    margin-bottom: 0;
+}
+
+section ul li a {
+    color: #007bff;
+    text-decoration: none;
+}
+
+section ul li a:hover {
+    text-decoration: none;
+    color: #0056b3;
+}
+
+
 
 
 
