--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -305,19 +305,48 @@ footer {
     text-decoration: underline;
 }
 
-/* Стили для блока с топ-студентами */
 .top-students {
-    background-color: #f8f8f8;
-    padding: 20px;
-    margin-top: 20px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
 }
 
-.top-students h2 {
-    font-size: 24px;
+.student-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start; /* Изменено с center на flex-start */
+    gap: 20px;
+    flex-direction: row; /* Добавлено */
+    margin-left: 10px;
+}
+
+.student {
+    width: 200px;
+    background-color: #f9f9f9;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+.student img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
     margin-bottom: 10px;
 }
+
+.student-info {
+    text-align: left;
+}
+
+.student-info p {
+    margin: 5px 0;
+}
+
+.student-info p strong {
+    font-weight: bold;
+}
+
+
+
 
 /* Стили для блока студента */
 .student {
