--- a/templates/university/profile.html.twig
+++ b/templates/university/profile.html.twig
@@ -151,4 +151,5 @@
             margin-left: 40px;
         }
     </style>
+    <script src="{{ asset('js/animation.js') }}"></script>
 {% endblock %}
