--- a/templates/shared/index.html.twig
+++ b/templates/shared/index.html.twig
@@ -44,20 +44,21 @@
         {% endif %}
     </div>
 
-    <div class="top-students">
-        <h2>Топ студентов</h2>
+    <h2>Топ студентов</h2>
+    <div class="top-students" style="display: flex; flex-flow: wrap; gap: 10px">
         {% for student in top_students %}
-            <img src="{{ asset('images/' ~ student.photo) }}" width="150" alt="Фото" id="photo"/>
-            <div class="student-info" onclick="location.href='/student/view/{{ student.id }}'">
-                <p>Фамилия: {{ student.lastname }}</p>
-                <p>Имя: {{ student.firstname }}</p>
-                <p>Город: {{ student.city }}</p>
-                <p>ВУЗ: {{ student.university }}</p>
-                <p>Факультет: {{ student.faculty }}</p>
+            <div class="student-container">
+                <div class="student">
+                    <img src="{{ asset('images/' ~ student.photo) }}" width="150" alt="Фото" id="photo"/>
+                    <div class="student-info">
+                        <p>Фамилия: {{ student.lastname }}</p>
+                        <p>Имя: {{ student.firstname }}</p>
+                        <p>Город: {{ student.city }}</p>
+                        <p>ВУЗ: {{ student.university }}</p>
+                        <p>Факультет: {{ student.faculty }}</p>
+                    </div>
+                </div>
             </div>
         {% endfor %}
-        <div class="student">
-
-        </div>
     </div>
 {% endblock %}
