--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -25,3 +25,17 @@
         {% endif %}
     </ul>
 </nav>
+<div class="login-button">
+    {% if app.user %}
+        {% if 'ROLE_STUDENT' in  app.user.roles %}
+            <button onclick="location.href='/student/view/{{ app.user.id }}'">Профиль</button>
+        {% else %}
+            <button onclick="location.href='/university/view/{{ app.user.university.id ?? 1 }}'">Профиль</button>
+        {% endif %}
+        <button onclick="location.href='/logout'">Выйти</button>
+    {% else %}
+        <button onclick="location.href='/login'">Войти</button>
+        <button onclick="location.href='/registration'">Регистрация</button>
+    {% endif %}
+</div>
+
