--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -120,7 +120,7 @@ header {
 
 /* Стили для кнопки входа */
 .login-button {
-    position: fixed;
+    position: absolute;
     top: 30px;
     right: 60px;
 }
