--- a/templates/university/create.profile.html.twig
+++ b/templates/university/create.profile.html.twig
@@ -2,58 +2,14 @@
 {% block body %}
     <div class="university-info">
         <form method="post">
-            {% if has_edit %}
-                <button class="upload-button">Сохранить</button>
-                <h3>Название:
-                    <input class="basic-in" name="name" value="{{ university.name }}">
-                </h3>
-                <h3>Адрес:
-                    <input class="basic-in" name="address" value="{{ university.address }}">
-                </h3>
-                <h3>Город:
-                    <input class="basic-in" name="city" value="{{ university.city }}">
-                </h3>
-            {% else %}
-                <h3>Название:{{ university.name }}
-                </h3>
-                <h3>Адрес:{{ university.address }}
-                </h3>
-                <h3>Город:{{ university.city }}
-                </h3>
-            {% endif %}
-
+            <h2>Добавление университета</h2>
+            <input type="text" id="name" name="name" placeholder="Введите название университета" required><br>
+            <input type="text" id="address" name="address" placeholder="Введите адрес университета" required><br>
+            <input type="text" id="city" name="city" placeholder="Введите город университета" required><br><br>
+            <label for="photo">Загрузить фото:</label><br>
+            <input type="file" id="photo" name="photo"><br><br>
+            <button type="submit">Добавить университет</button>
         </form>
-        <h2>Факультеты и кафедры</h2>
-        <div>
-            {% for faculty in info %}
-                <div class="faculty">
-                    Факультет: {{ faculty.name }}
-                    {% for kafedra in faculty.kafedras %}
-                        <div class="kafedra">
-                            Кафедра: {{ kafedra.name }}
-                            {% for teachGroup in kafedra.teachGroups %}
-                                <div class="group">
-                                    Группа: {{ teachGroup.name }} / {{ teachGroup.stream_year }}
-                                </div>
-                            {% endfor %}
-                            <div class="group">
-                                <button data-kafedra="{{ kafedra.id }}" class="add-group">Добавить группу</button>
-                            </div>
-                        </div>
-                    {% endfor %}
-                    <div class="kafedra">
-                        <button data-faculty="{{ faculty.id }}" class="add-kafedra">Добавить кафедру</button>
-                    </div>
-                </div>
-            {% endfor %}
-            <div>
-                <button data-university="{{ university.id }}" class="add-faculty">Добавить факультет</button>
-            </div>
-        </div>
-    </div>
-
-    <div class="university-students">
-        <button><a href="/student/super_filter?university={{ university.name }}">Студенты ВУЗа</a></button>
     </div>
     <script>
 
@@ -127,9 +83,10 @@
 
 
         {% if not has_edit %}
-        div>button{
+        div > button {
             display: none;
         }
+
         {% endif %}
 
 
